# VK2TG

./: CMakeLists.txt  README.md  build.gradle.kts  main.cpp  settings.gradle.kts
remote/dto/: message.h
src/main/kotlin/kiko/: Application.kt  Main.kt
src/main/kotlin/kiko/constants/: ApplicationConstant.kt
src/main/kotlin/kiko/services/: MessagingRoute.kt
src/main/kotlin/niko/data/message/: NativeMessages.kt
src/main/resources/: application.conf
